extract long date form ISO format and API UI usage on 8 Feb 2022 @1511 GMT+2

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,15 @@ justify-content: center;
     font-style: italic;
   }
 
-  .articles{
-    display: flex;
-    justify-content: center;    
+ .articles{
+     display: inline !important;
+    justify-content: center !important;    
  }
+
+ .list-item{
+transform: translateX(50%);
+padding-bottom: 5em;
+}
+.img-wrap{
+    padding-right: 0;
+}
